--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,9 @@ dependencies {
 
     //Gif Dependencies
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.25'
+
+    //QrCode
+    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
+    implementation "androidx.multidex:multidex:2.0.1"
 }
